[gd_scene load_steps=11 format=2]

[ext_resource path="res://VFX/BackgroundStars.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/PopUp/GameMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/PopUp/LoginScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/PopUp/Bidding.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main/Main.gd" type="Script" id=5]
[ext_resource path="res://assets/PNG/Power-ups/powerupBlue.png" type="Texture" id=6]
[ext_resource path="res://Main/KapustaControlNode.gd" type="Script" id=7]
[ext_resource path="res://UI/PopUp/SelectTeam.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/PopUp/PopUp.gd" type="Script" id=9]
[ext_resource path="res://Main/Map.gd" type="Script" id=10]

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="KapustaControlNode" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Map" type="Node2D" parent="."]
light_mask = 0
script = ExtResource( 10 )

[node name="BackgroundStars" parent="Map" instance=ExtResource( 1 )]

[node name="Edges" type="Line2D" parent="Map"]
position = Vector2( -4000, -4000 )
points = PoolVector2Array( 0, 0, 8000, 0, 8000, 8000, 0, 8000, 0, 0 )
default_color = Color( 0.623529, 0.313726, 0.313726, 1 )
joint_mode = 2
begin_cap_mode = 2

[node name="MidPoint" type="Sprite" parent="Map"]
texture = ExtResource( 6 )

[node name="PlayersWorld" type="Node" parent="."]

[node name="ProjectileWorld" type="Node" parent="."]

[node name="PopUp" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource( 9 )

[node name="SelectTeam" parent="PopUp" instance=ExtResource( 8 )]
visible = false

[node name="LoginScreen" parent="PopUp" instance=ExtResource( 3 )]
visible = false

[node name="GameMenu" parent="PopUp" instance=ExtResource( 2 )]

[node name="BiddingTab" parent="PopUp" instance=ExtResource( 4 )]
visible = false
